# RUGB

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: Docker.yml  autofix.yml  ci.yml
docs/: README.md  apu.md  architecture.md  cartridge.md  cpu.md  frontend.md  mmu.md  ppu.md  timer.md
rugb/src/: apu.rs  interrupt.rs  lib.rs  mmu.rs  ppu.rs
rugb/src/cartridge/: mbc1.rs  mbc3.rs  mbc5.rs
rugb/src/cpu/: cb_opcodes.rs  mod.rs  opcodes.rs  registers.rs
rugb/tests/: apu_tests.rs  cartridge_tests.rs  cpu_tests.rs  emulator_tests.rs
rugba/: Cargo.toml
rugba/src/: apu.rs  bus.rs  bus_tests.rs  cartridge.rs  dma.rs  io.rs  keypad.rs  keypad_tests.rs  lib.rs  timer.rs
rugba/src/arm7tdmi/: arm.rs  mod.rs  registers.rs  tests.rs  thumb.rs
rugba/src/ppu/: bg.rs  blend.rs  mod.rs  modes.rs  obj.rs  tests.rs
rugba/tests/: arm_instruction_tests.rs
src/: apu.rs  interrupt.rs  joypad.rs  lib.rs  mmu.rs  ppu.rs  savestate.rs  timer.rs
src/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  no_mbc.rs
src/cpu/: cb_opcodes.rs  mod.rs  opcodes.rs  registers.rs
tools/: build_cheats.py
web/: audio-processor.js  docs.html  index.html  manifest.json  style.css  sw.js
web/js/: index.js
